--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,7 @@ $red: #ca3e49;
 
 @font-face {
   font-family: digital7;
-  src: url(/fonts/digital-7.mono.woff);
+  src: url(../fonts/digital-7.mono.woff);
 }
 
 * {
