--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 
 @font-face {
   font-family: digital7;
-  src: url(/fonts/digital-7.mono.woff);
+  src: url(../fonts/digital-7.mono.woff);
 }
 
 * {
