--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,7 @@ canvas {
 .calculator {
   width: 600px;
   height: 800px;
+  max-height: 100%;
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: 200px 1fr;
