--- a/sass/main.scss
+++ b/sass/main.scss
@@ -45,6 +45,7 @@ canvas {
 .calculator {
   width: 600px;
   height: 800px;
+  max-height: 100%;
   display: grid;
   grid-template-rows: 200px 1fr;
   border-radius: 5px;
