--- a/css/main.css
+++ b/css/main.css
@@ -15,17 +15,21 @@
 
 html {
   font-family: arial, sans-serif;
+  font-size: 10px;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow: hidden;
+  position: relative;
 }
 
 canvas {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   position: fixed;
   z-index: -1;
   top: 0;
@@ -46,26 +50,26 @@ canvas {
 }
 
 .calculator {
-  width: 600px;
-  height: 800px;
+  width: 60rem;
+  height: 80rem;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 200px 1fr;
-      grid-template-rows: 200px 1fr;
-  border-radius: 5px;
+  -ms-grid-rows: 20rem 1fr;
+      grid-template-rows: 20rem 1fr;
+  border-radius: 0.5rem;
   position: relative;
   z-index: 1;
-  -webkit-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5), inset 0 1px rgba(189, 208, 205, 0.3), inset 0 10px rgba(189, 208, 205, 0.2), inset 0 10px 20px rgba(189, 208, 205, 0.25), inset 0 -15px 30px rgba(0, 0, 0, 0.3);
-          box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5), inset 0 1px rgba(189, 208, 205, 0.3), inset 0 10px rgba(189, 208, 205, 0.2), inset 0 10px 20px rgba(189, 208, 205, 0.25), inset 0 -15px 30px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 0.2rem 0.6rem rgba(0, 0, 0, 0.5), inset 0 0.1rem rgba(189, 208, 205, 0.3), inset 0 1rem rgba(189, 208, 205, 0.2), inset 0 1rem 2rem rgba(189, 208, 205, 0.25), inset 0 -1.5rem 3rem rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0.2rem 0.6rem rgba(0, 0, 0, 0.5), inset 0 0.1rem rgba(189, 208, 205, 0.3), inset 0 1rem rgba(189, 208, 205, 0.2), inset 0 1rem 2rem rgba(189, 208, 205, 0.25), inset 0 -1.5rem 3rem rgba(0, 0, 0, 0.3);
   background: rgba(234, 240, 239, 0.65);
   font-family: inherit;
 }
 
 .screen {
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-  -webkit-box-shadow: 0 2px 6px rgba(57, 38, 26, 0.5), inset 0 1px rgba(57, 38, 26, 0.3), inset 0 10px 20px rgba(57, 38, 26, 0.25), inset 0 -15px 30px rgba(57, 38, 26, 0.3);
-          box-shadow: 0 2px 6px rgba(57, 38, 26, 0.5), inset 0 1px rgba(57, 38, 26, 0.3), inset 0 10px 20px rgba(57, 38, 26, 0.25), inset 0 -15px 30px rgba(57, 38, 26, 0.3);
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+  -webkit-box-shadow: 0 0.2rem 0.6rem rgba(57, 38, 26, 0.5), inset 0 0.1rem rgba(57, 38, 26, 0.3), inset 0 1rem 2rem rgba(57, 38, 26, 0.25), inset 0 -1.5rem 3rem rgba(57, 38, 26, 0.3);
+          box-shadow: 0 0.2rem 0.6rem rgba(57, 38, 26, 0.5), inset 0 0.1rem rgba(57, 38, 26, 0.3), inset 0 1rem 2rem rgba(57, 38, 26, 0.25), inset 0 -1.5rem 3rem rgba(57, 38, 26, 0.3);
   background: rgba(235, 234, 240, 0.65);
   display: -ms-grid;
   display: grid;
@@ -79,15 +83,15 @@ canvas {
 }
 
 .screen__switch {
-  bottom: -5px;
+  bottom: -0.5rem;
   position: absolute;
-  left: 18px;
-  height: 36px;
+  left: 1.8rem;
+  height: 3.6rem;
 }
 
 .onoffswitch {
   position: relative;
-  width: 115px;
+  width: 11.5rem;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -101,8 +105,8 @@ canvas {
   display: block;
   overflow: hidden;
   cursor: pointer;
-  border: 2px solid #4b5780;
-  border-radius: 5px;
+  border: 0.2rem solid #4b5780;
+  border-radius: 0.5rem;
 }
 
 .onoffswitch-inner {
@@ -113,14 +117,15 @@ canvas {
   transition: margin 0.3s ease-in 0s;
 }
 
-.onoffswitch-inner:before, .onoffswitch-inner:after {
+.onoffswitch-inner:before,
+.onoffswitch-inner:after {
   display: block;
   float: left;
   width: 50%;
-  height: 30px;
+  height: 3rem;
   padding: 0;
-  line-height: 30px;
-  font-size: 14px;
+  line-height: 3rem;
+  font-size: 1.4rem;
   color: #fff;
   font-family: Arial, sans-serif;
   font-weight: bold;
@@ -130,14 +135,14 @@ canvas {
 
 .onoffswitch-inner:before {
   content: "Scientific";
-  padding-left: 10px;
+  padding-left: 1rem;
   background-color: #ca3e49;
   color: #fff;
 }
 
 .onoffswitch-inner:after {
   content: "Standard";
-  padding-right: 10px;
+  padding-right: 1rem;
   background-color: #4b5780;
   color: #fff;
   text-align: right;
@@ -145,15 +150,15 @@ canvas {
 
 .onoffswitch-switch {
   display: block;
-  width: 18px;
-  margin: 6px;
+  width: 1.8rem;
+  margin: 0.6rem;
   background: #fff;
   position: absolute;
   top: 0;
   bottom: 0;
-  right: 76px;
-  border: 2px solid #4b5780;
-  border-radius: 5px;
+  right: 7.6rem;
+  border: 0.2rem solid #4b5780;
+  border-radius: 0.5rem;
   -webkit-transition: all 0.3s ease-in 0s;
   transition: all 0.3s ease-in 0s;
 }
@@ -163,7 +168,7 @@ canvas {
 }
 
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
-  right: 0px;
+  right: 0;
 }
 
 .screen-content {
@@ -179,14 +184,14 @@ canvas {
 }
 
 .screen__input {
-  padding: 0 20px;
+  padding: 0 2rem;
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: 1fr;
   -ms-grid-columns: 1fr;
       grid-template: 1fr / 1fr;
-  font-family: 'digital7';
-  font-size: 70px;
+  font-family: "digital7";
+  font-size: 7rem;
   text-align: right;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -195,7 +200,7 @@ canvas {
 }
 
 .screen__expression {
-  padding: 0 20px;
+  padding: 0 2rem;
   text-align: right;
   display: -ms-grid;
   display: grid;
@@ -203,13 +208,14 @@ canvas {
       -ms-flex-align: center;
           align-items: center;
   overflow: auto;
+  font-size: 2.5rem;
 }
 
 .keypad {
-  padding: 20px;
+  padding: 2rem;
   display: -ms-grid;
   display: grid;
-  grid-gap: 5px;
+  grid-gap: 0.5rem;
   -ms-grid-columns: (1fr)[var];
       grid-template-columns: repeat(var(--keypadCols), 1fr);
   -ms-grid-rows: (1fr)[var];
@@ -217,11 +223,11 @@ canvas {
 }
 
 .cell {
-  border-radius: 5px;
+  border-radius: 0.5rem;
   background-position: center;
   -webkit-transition: background 0.8s;
   transition: background 0.8s;
-  font-size: 35px;
+  font-size: 3.5rem;
   line-height: 2;
   outline: 0;
   border-color: rgba(75, 87, 128, 0.8);
@@ -268,10 +274,28 @@ canvas {
   }
 }
 
-@media only screen and (width: 1366px) {
-  .calculator {
-    -webkit-transform: scale(0.9);
-            transform: scale(0.9);
+@media only screen and (max-width: 768px) {
+  html {
+    font-size: 5.5px;
+  }
+  .cell {
+    font-size: 3.3rem;
+  }
+}
+
+@media only screen and (max-width: 1024px) and (orientation: landscape) {
+  html {
+    font-size: 7.5px;
+  }
+  .wrapper {
+    padding-bottom: 10rem;
+  }
+  .cell {
+    font-size: 2.3rem;
+  }
+  .cell[value="deleteOne"] {
+    font-size: 4rem;
+    line-height: 1;
   }
 }
 /*# sourceMappingURL=main.css.map */
