--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,17 +18,21 @@ $red: #ca3e49;
 
 html {
   font-family: arial, sans-serif;
+  font-size: 10px;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow: hidden;
+  position: relative;
 }
 
 canvas {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   position: fixed;
   z-index: -1;
   top: 0;
@@ -43,32 +47,28 @@ canvas {
 }
 
 .calculator {
-  width: 600px;
-  height: 800px;
+  width: 60rem;
+  height: 80rem;
   display: grid;
-  grid-template-rows: 200px 1fr;
-  border-radius: 5px;
+  grid-template-rows: 20rem 1fr;
+  border-radius: 0.5rem;
   position: relative;
   z-index: 1;
-  box-shadow:
-    0 2px 6px rgba(0,0,0,0.5),
-    inset 0 1px rgba(189, 208, 205,0.3),
-    inset 0 10px rgba(189, 208, 205,0.2),
-    inset 0 10px 20px rgba(189, 208, 205,0.25),
-    inset 0 -15px 30px rgba(0,0,0,0.3);
-  background: rgba(234,240,239, 0.65);
+  box-shadow: 0 0.2rem 0.6rem rgba(0, 0, 0, 0.5), inset 0 0.1rem rgba(189, 208, 205, 0.3),
+    inset 0 1rem rgba(189, 208, 205, 0.2),
+    inset 0 1rem 2rem rgba(189, 208, 205, 0.25),
+    inset 0 -1.5rem 3rem rgba(0, 0, 0, 0.3);
+  background: rgba(234, 240, 239, 0.65);
   font-family: inherit;
 }
 
 .screen {
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-  box-shadow:
-    0 2px 6px rgba(57,38,26, 0.5),
-    inset 0 1px rgba(57,38,26, 0.3),
-    inset 0 10px 20px rgba(57,38,26, 0.25),
-    inset 0 -15px 30px rgba(57,38,26,0.3);
-  background: rgba(235,234,240,0.65);
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+  box-shadow: 0 0.2rem 0.6rem rgba(57, 38, 26, 0.5), inset 0 0.1rem rgba(57, 38, 26, 0.3),
+    inset 0 1rem 2rem rgba(57, 38, 26, 0.25),
+    inset 0 -1.5rem 3rem rgba(57, 38, 26, 0.3);
+  background: rgba(235, 234, 240, 0.65);
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 70%;
@@ -77,126 +77,127 @@ canvas {
 }
 
 .screen__switch {
-  bottom: -5px;
+  bottom: -0.5rem;
   position: absolute;
-  left: 18px;
-  height: 36px;
+  left: 1.8rem;
+  height: 3.6rem;
 }
 
 .onoffswitch {
-  position: relative; 
-  width: 115px;
-  -webkit-user-select:none; 
-  -moz-user-select:none; 
+  position: relative;
+  width: 11.5rem;
+  -webkit-user-select: none;
+  -moz-user-select: none;
   -ms-user-select: none;
 }
 .onoffswitch-checkbox {
   display: none;
 }
 .onoffswitch-label {
-  display: block; 
-  overflow: hidden; 
+  display: block;
+  overflow: hidden;
   cursor: pointer;
-  border: 2px solid $blue; 
-  border-radius: 5px;
+  border: 0.2rem solid $blue;
+  border-radius: 0.5rem;
 }
 .onoffswitch-inner {
-  display: block; 
-  width: 200%; 
+  display: block;
+  width: 200%;
   margin-left: -100%;
   transition: margin 0.3s ease-in 0s;
 }
-.onoffswitch-inner:before, .onoffswitch-inner:after {
-  display: block; 
-  float: left; 
-  width: 50%; 
-  height: 30px; 
+.onoffswitch-inner:before,
+.onoffswitch-inner:after {
+  display: block;
+  float: left;
+  width: 50%;
+  height: 3rem;
   padding: 0;
-  line-height: 30px;
-  font-size: 14px; 
-  color: #fff; 
-  font-family: Arial, sans-serif; 
+  line-height: 3rem;
+  font-size: 1.4rem;
+  color: #fff;
+  font-family: Arial, sans-serif;
   font-weight: bold;
   box-sizing: border-box;
 }
 .onoffswitch-inner:before {
   content: "Scientific";
-  padding-left: 10px;
-  background-color: $red; 
+  padding-left: 1rem;
+  background-color: $red;
   color: #fff;
 }
 .onoffswitch-inner:after {
   content: "Standard";
-  padding-right: 10px;
-  background-color: $blue; 
+  padding-right: 1rem;
+  background-color: $blue;
   color: #fff;
   text-align: right;
 }
 .onoffswitch-switch {
-  display: block; 
-  width: 18px; 
-  margin: 6px;
+  display: block;
+  width: 1.8rem;
+  margin: 0.6rem;
   background: #fff;
-  position: absolute; 
-  top: 0; 
+  position: absolute;
+  top: 0;
   bottom: 0;
-  right: 76px;
-  border: 2px solid $blue; 
-  border-radius: 5px;
-  transition: all 0.3s ease-in 0s; 
+  right: 7.6rem;
+  border: 0.2rem solid $blue;
+  border-radius: 0.5rem;
+  transition: all 0.3s ease-in 0s;
 }
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
   margin-left: 0;
 }
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
-  right: 0px; 
+  right: 0;
 }
 
 .screen-content {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 6fr 3fr;
-  align-content: center; 
-  background: rgba(0,0,0,0.15);
+  align-content: center;
+  background: rgba(0, 0, 0, 0.15);
 }
 
 .screen__input {
-  padding: 0 20px;
+  padding: 0 2rem;
   display: grid;
   grid-template: 1fr / 1fr;
-  font-family: 'digital7';
-  font-size: 70px;
+  font-family: "digital7";
+  font-size: 7rem;
   text-align: right;
   align-items: center;
   overflow: auto;
 }
 
 .screen__expression {
-  padding: 0 20px;
+  padding: 0 2rem;
   text-align: right;
   display: grid;
   align-items: center;
   overflow: auto;
+  font-size: 2.5rem;
 }
 
 .keypad {
-  padding: 20px;
+  padding: 2rem;
   display: grid;
-  grid-gap: 5px;
+  grid-gap: 0.5rem;
   grid-template-columns: repeat(var(--keypadCols), 1fr);
   grid-template-rows: repeat(var(--keypadRows), 1fr);
 }
 
-
 .cell {
-  border-radius: 5px;
+  border-radius: 0.5rem;
   background-position: center;
   transition: background 0.8s;
-  font-size: 35px;
+  font-size: 3.5rem;
   line-height: 2;
   outline: 0;
   border-color: rgba(75, 87, 128, 0.8);
-  color: rgba(235,234,240, 1);
+  color: rgba(235, 234, 240, 1);
   background: $darkblue;
   font-family: inherit;
 
@@ -210,13 +211,19 @@ canvas {
 
 @media only screen and (min-width: 1600px) {
   .cell:hover {
-    background: lighten($darkblue, 10%) radial-gradient(circle, transparent 1%, lighten($darkblue, 10%) 1%) center/15000%;
+    background: lighten($darkblue, 10%)
+      radial-gradient(circle, transparent 1%, lighten($darkblue, 10%) 1%)
+      center/15000%;
   }
   .cell--prime:hover {
-    background: lighten($blue, 10%) radial-gradient(circle, transparent 1%, lighten($blue, 10%) 1%) center/15000%;
+    background: lighten($blue, 10%)
+      radial-gradient(circle, transparent 1%, lighten($blue, 10%) 1%)
+      center/15000%;
   }
   .cell--sec:hover {
-    background: lighten($red, 10%) radial-gradient(circle, transparent 1%, lighten($red, 10%) 1%) center/15000%;
+    background: lighten($red, 10%)
+      radial-gradient(circle, transparent 1%, lighten($red, 10%) 1%)
+      center/15000%;
   }
   .cell:active {
     background-color: lighten($darkblue, 25%);
@@ -235,8 +242,27 @@ canvas {
   }
 }
 
-@media only screen and (width: 1366px) {
-  .calculator {
-    transform: scale(0.9);
+@media only screen and (max-width: 768px) {
+  html {
+    font-size: 5.5px;
+  }
+  .cell {
+    font-size: 3.3rem;
+  }
+}
+
+@media only screen and (max-width: 1024px) and (orientation: landscape) {
+  html {
+    font-size: 7.5px;
+  }
+  .wrapper {
+    padding-bottom: 10rem;
+  }
+  .cell {
+    font-size: 2.3rem;
+  }
+  .cell[value="deleteOne"] {
+    font-size: 4rem;
+    line-height: 1;
   }
 }
